Sonar clean-up
o squid:S2111 - BigDecimal(double) should not be used
o squid:S2068 - Credentials should not be hard-coded
o squid:S2159 - Silly equality checks should not be made
o squid:S2245 - use secure pseudo-random number generators
o findbugs:UL_UNRELEASED_LOCK_EXCEPTION_PATH
o findbugs:DM_NUMBER_CTOR
o findbugs:RCN_REDUNDANT_NULLCHECK_WOULD_HAVE_BEEN_A_NPE

Change-Id: I96e9071a50bb33ca4ae9b2ee2a8744f0fef30fd4
Reviewed-on: https://git.eclipse.org/r/78345
Tested-by: Hudson CI
Reviewed-by: Andi Bur <andi.bur@gmail.com>